// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`normalized analysis parity snapshots > keeps deterministic and projection surfaces within parity thresholds for goals-and-life-events 1`] = `
{
  "analysis": {
    "allocationWeights": [
      0.3,
      0.1,
      0.1,
      0.3,
      0.05,
      0.05,
      0.1,
      0,
    ],
    "initialPortfolio": 210000,
    "retirementPortfolio": 1742735.061920344,
  },
  "fire": {
    "fireAge": 109.46438380834726,
    "fireNumber": 10202354.585967815,
    "progress": 0.02058348376646615,
    "totalNWIncProperty": 210000,
    "yearsToFire": 72.46438380834726,
  },
  "projection": {
    "retirementRowAge": 58,
    "summary": {
      "mediSaveDepletionAge": null,
      "portfolioDepletedAge": 85,
      "terminalLiquidNW": 0,
      "totalGoalShortfall": 0,
      "totalRetirementWithdrawalShortfall": 0,
    },
  },
}
`;

exports[`normalized analysis parity snapshots > keeps deterministic and projection surfaces within parity thresholds for goals-and-life-events 2`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 104469.9911507141,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 1742735.061920344,
  "lifeExpectancy": 93,
  "oneTimeWithdrawals": [
    {
      "amount": 45218.148739564676,
      "year": 3,
    },
  ],
  "portfolioInjections": [],
  "postRetirementIncome": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
  ],
  "retirementAge": 58,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "strategyParams": {
    "swr": 0.04,
  },
  "withdrawalBasis": "expenses",
  "withdrawalStrategy": "constant_dollar",
  "yearlyWeights": undefined,
}
`;

exports[`normalized analysis parity snapshots > keeps deterministic and projection surfaces within parity thresholds for pr-residency-transition 1`] = `
{
  "analysis": {
    "allocationWeights": [
      0.3,
      0.1,
      0.1,
      0.3,
      0.05,
      0.05,
      0.1,
      0,
    ],
    "initialPortfolio": 557000,
    "retirementPortfolio": 1571040.1778621702,
  },
  "fire": {
    "fireAge": 87.49202233879322,
    "fireNumber": 4462404.414572375,
    "progress": 0.12482060079114914,
    "totalNWIncProperty": 1317000,
    "yearsToFire": 30.492022338793216,
  },
  "projection": {
    "retirementRowAge": 67,
    "summary": {
      "mediSaveDepletionAge": null,
      "portfolioDepletedAge": 82,
      "terminalLiquidNW": 0,
      "totalGoalShortfall": 0,
      "totalRetirementWithdrawalShortfall": 0,
    },
  },
}
`;

exports[`normalized analysis parity snapshots > keeps deterministic and projection surfaces within parity thresholds for pr-residency-transition 2`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 89605.91809374497,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 1571040.1778621702,
  "lifeExpectancy": 92,
  "oneTimeWithdrawals": [],
  "portfolioInjections": [],
  "postRetirementIncome": [
    0,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
  ],
  "retirementAge": 67,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "strategyParams": {
    "swr": 0.04,
  },
  "withdrawalBasis": "expenses",
  "withdrawalStrategy": "constant_dollar",
  "yearlyWeights": undefined,
}
`;

exports[`normalized analysis parity snapshots > keeps deterministic and projection surfaces within parity thresholds for property-and-CPF 1`] = `
{
  "analysis": {
    "allocationWeights": [
      0.3,
      0.1,
      0.1,
      0.3,
      0.05,
      0.05,
      0.1,
      0,
    ],
    "initialPortfolio": 742000,
    "retirementPortfolio": 4945987.208696831,
  },
  "fire": {
    "fireAge": 50.193853859676715,
    "fireNumber": 2572354.2424974726,
    "progress": 0.2604617936872893,
    "totalNWIncProperty": 1095000,
    "yearsToFire": 10.193853859676715,
  },
  "projection": {
    "retirementRowAge": 60,
    "summary": {
      "mediSaveDepletionAge": null,
      "portfolioDepletedAge": null,
      "terminalLiquidNW": 20425333.17373807,
      "totalGoalShortfall": 0,
      "totalRetirementWithdrawalShortfall": 0,
    },
  },
}
`;

exports[`normalized analysis parity snapshots > keeps deterministic and projection surfaces within parity thresholds for property-and-CPF 2`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 117980.38370090838,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 4945987.208696831,
  "lifeExpectancy": 95,
  "oneTimeWithdrawals": [],
  "portfolioInjections": [
    {
      "amount": 1067800,
      "year": 5,
    },
  ],
  "postRetirementIncome": [
    14400,
    54709.9644311437,
    55717.71354192228,
    133953.43257606612,
    135012.19898557788,
    156785.54223239198,
    157897.9086913853,
    159038.0843118534,
    160206.76432283322,
    161404.66133408755,
    162632.50577062322,
    163891.0463180723,
    165181.0503792076,
    89300.52834627545,
    90655.8388630057,
    92045.03214265424,
    93468.95525429396,
    94928.4764437247,
    96424.48566289121,
    97957.89511253685,
    99529.63979842365,
    101140.67810145763,
    102791.99236206745,
    104484.58947919251,
    106219.50152424572,
    107997.78637042525,
    109820.52833775926,
    111688.8388542766,
    113603.85713370692,
    115566.75087012295,
    117578.71694994942,
    119640.98218177151,
    121754.8040443892,
    123921.4714535723,
    126142.30554798499,
  ],
  "retirementAge": 60,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "strategyParams": {
    "swr": 0.04,
  },
  "withdrawalBasis": "expenses",
  "withdrawalStrategy": "constant_dollar",
  "yearlyWeights": undefined,
}
`;

exports[`normalized analysis parity snapshots > keeps deterministic and projection surfaces within parity thresholds for salary-only 1`] = `
{
  "analysis": {
    "allocationWeights": [
      0.3,
      0.1,
      0.1,
      0.3,
      0.05,
      0.05,
      0.1,
      0,
    ],
    "initialPortfolio": 125000,
    "retirementPortfolio": 2814393.752527786,
  },
  "fire": {
    "fireAge": 55.752707154710336,
    "fireNumber": 2296699.1309265858,
    "progress": 0.05442593603872254,
    "totalNWIncProperty": 125000,
    "yearsToFire": 23.75270715471034,
  },
  "projection": {
    "retirementRowAge": 60,
    "summary": {
      "mediSaveDepletionAge": null,
      "portfolioDepletedAge": null,
      "terminalLiquidNW": 13185393.919835262,
      "totalGoalShortfall": 0,
      "totalRetirementWithdrawalShortfall": 0,
    },
  },
}
`;

exports[`normalized analysis parity snapshots > keeps deterministic and projection surfaces within parity thresholds for salary-only 2`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 91838.77086283134,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 2814393.752527786,
  "lifeExpectancy": 92,
  "oneTimeWithdrawals": [],
  "portfolioInjections": [],
  "postRetirementIncome": [
    0,
    0,
    0,
    0,
    0,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
  ],
  "retirementAge": 60,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "strategyParams": {
    "swr": 0.04,
  },
  "withdrawalBasis": "expenses",
  "withdrawalStrategy": "constant_dollar",
  "yearlyWeights": undefined,
}
`;
